# Depth-Vision-UAV-Autopilot

./: .env.example  .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  airsim-environments.md  apf.py  config.py  docker-compose.yml  main.py  requirements.txt
config/: settings.json
data-generation/: script-single-spawn-drone.py  script.py
experiments/: experiments.sh
modules/: DWA.py  VO.py  drone_control.py  global_planner.py  local_planner.py  perception.py
monocular-drone/: Dockerfile  setup.md
monocular-drone/drone-node/: CMakeLists.txt  package.xml
monocular-drone/drone-node/launch/: drone.launch
monocular-drone/drone-node/rviz/: visual.rviz
monocular-drone/drone-node/src/: a_star.py  analyze_metrics.py  apf_dwa_local_planner.py  data_logger.py  depth.py  depth_train_v2_base.py  depth_train_v2_large.py  depth_train_v2_small.py  fix_and_analyze.py  hybrid_planner.py  informed_rrt_star.py  mapper.py  mapper_nav_ros.py  nav_config.py  run_batch_test.py  utils.py
monocular-drone/scripts/: drone_camera_calibration.py  drone_control_keyboard.py  drone_save_camera_feed.py
output/: depth_planar.pfm
tests/: fly_mission.py  test_perception.py  test_perception_control.py  test_rrt.py
utils/: math_utils.py  visualization.py
